--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-jest": "^29.4.1",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^13.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.48.0",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "^9.0.0",
@@ -61,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "17.2.8",
@@ -68,5 +70,10 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
